- change sorting method from name to age - research 3 times untill success

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <script type="text/javascript" src="./javascript/inspector.js"></script>
       <script type="text/javascript" src="./javascript/prefs-dialog.js"></script>
       <script type="text/javascript" src="./javascript/remote.js"></script>
-      <script type="text/javascript" src="./javascript/transmission.js?v=82"></script>
+      <script type="text/javascript" src="./javascript/transmission.js?v=87"></script>
       <script type="text/javascript" src="./javascript/torrent.js"></script>
       <script type="text/javascript" src="./javascript/torrent-row.js"></script>
       <script type="text/javascript" src="./javascript/file-row.js"></script>
@@ -44,6 +44,7 @@
       <script type="text/javascript" src="./javascript/formatter.js"></script>
       <script type="text/javascript" src="./javascript/notifications.js"></script>
       <script type="text/javascript" src="./javascript/bluebird.js"></script>
+      <script type="text/javascript" src="./javascript/jquery.longclick-min.js"></script>
       <title>Transmission</title>
       
       <style>
@@ -541,6 +542,7 @@ tr:nth-child(even){background-color: #f2f2f2}
               <a href="#top_tv_shows" id="top_tv_shows_button">Top TV Shows</a>
               <a href="#top_music" id="top_music_button">Top Music</a>
             </div>
+            
             <table border="1" id="example" style="
                cursor: pointer;
                height: auto;
